@@ -92,6 +92,9 @@ option condition : string = ""
 option timeout : real = 0
   -- "timeout for session build job (seconds > 0)"
 
+option timeout_scale : real = 1.0
+  -- "scale factor for session timeout"
+
 option process_output_limit : int = 100
   -- "build process output limit in million characters (0 = unlimited)"
 
