@@ -50,6 +50,9 @@ object Build
     files: List[Path],
     document_files: List[(Path, Path)],
     entry_digest: SHA1.Digest)
+  {
+    def timeout: Time = Time.seconds(options.real("timeout") * options.real("timeout_scale"))
+  }
 
   def is_pure(name: String): Boolean = name == "RAW" || name == "Pure"
 
@@ -342,7 +345,6 @@ object Build
         Map(timings.map({ case (name, (_, t)) => (name, t) }): _*).withDefaultValue(0.0)
 
       def outdegree(name: String): Int = graph.imm_succs(name).size
-      def timeout(name: String): Double = tree(name).options.real("timeout")
 
       object Ordering extends scala.math.Ordering[String]
       {
@@ -359,7 +361,7 @@ object Build
             case 0 =>
               compare_timing(name2, name1) match {
                 case 0 =>
-                  timeout(name2) compare timeout(name1) match {
+                  tree(name2).timeout compare tree(name1).timeout match {
                     case 0 => name1 compare name2
                     case ord => ord
                   }
@@ -620,7 +622,7 @@ object Build
     @volatile private var was_timeout = false
     private val timeout_request: Option[Event_Timer.Request] =
     {
-      val timeout = info.options.seconds("timeout")
+      val timeout = info.timeout
       if (timeout > Time.zero)
         Some(Event_Timer.request(Time.now() + timeout) { terminate; was_timeout = true })
       else None
